--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OGC CQL2 Filters playground</title>
     <link rel="stylesheet" href="./src/index.css" />
-    <link rel="icon" href="./public/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
